@@ -1,0 +1,7 @@
+#ifndef __OL_PLAYER_JUK_H__
+#define __OL_PLAYER_JUK_H__
+#include "ol_player.h"
+
+struct OlPlayer* ol_player_juk_get ();
+
+#endif // __OL_PLAYER_JUK_H__
